remove conn string

--- a/appointments-web/AppointmentApp.Web/Web.config
+++ b/appointments-web/AppointmentApp.Web/Web.config
@@ -31,9 +31,8 @@
   </appSettings>
   <connectionStrings>
     
-    <!--<add name="Default" connectionString="Data Source=(localdb)\mssqllocaldb; Initial Catalog=AppointmentAppDB; Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <add name="Default" connectionString="Data Source=(localdb)\mssqllocaldb; Initial Catalog=AppointmentAppDB; Integrated Security=True;" providerName="System.Data.SqlClient" />
 
-    <add name="Default" connectionString="Data Source=cs84bvagcq.database.windows.net,1433; Initial Catalog=AppointmentAppDb;User ID=martin@cs84bvagcq;Password=Solev450045;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
